// Protobuf version spec.
syntax = "proto3";

option go_package = "proto;pb";

option java_package = "br.com.rodrigodonizettio.pcbook.pb";
message Screen {
  enum Resolution {
    WIDTH = 0;
    HEIGHT = 1;
  }

  enum Panel {
    UNKNOWN = 0;
    IPS = 1;
    OLED = 2;
  }

  float size_inch = 1;
  Resolution resolution = 2;
  Panel panel = 3;
  bool multitouch = 4;
}