// Protobuf version spec.
syntax = "proto3";

import "proto/processor_message.proto";
import "proto/memory_message.proto";
import "proto/storage_message.proto";
import "proto/screen_message.proto";
import "proto/keyboard_message.proto";

import "google/protobuf/timestamp.proto";

option go_package = "proto;pb";

message Laptop {
  string id = 1;
  string brand = 2;
  string name = 3;
  Cpu cpu = 4;
  Memory ram = 5;
  repeated Gpu gpus = 6; //"repeated" will tell to protobuf compiler (protoc) generate a SLICE (same as "List" structure type in Java)
  repeated Storage storages = 7;
  Screen screen = 8;
  Keyboard keyboard = 9;
  oneof weight { //"oneof" will tell to protobuf compiler (protoc) generate a single field of each other variable inside of it
    double weight_kg = 10;
    double weight_lb = 11;
  }
  double price_brl = 12;
  uint32 release_year = 13;
  google.protobuf.Timestamp updated_at = 14;
}