// Protobuf version spec.
syntax = "proto3";

// message <NameOfTheMessage>
message Cpu {
  // <data-type> name_of_field = tag_number
  string brand = 1;
  string name = 2;
  uint32 number_cores = 8;
  uint32 number_threads = 4;
  double min_ghz = 5;
  double max_ghz = 6;
}